--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,14 @@
 * {
     box-sizing: border-box;
-    justify-content: flex-start;
     font-family: FontAwesome; 
     margin: 0;
     padding:0;
 }
 
-html {
-    height: 100%;
-}
-
 body {
-    width: 100%;
-    height: 100%;
-    margin:10px 20px 10px 20px;
+    min-height: 100vh;
+    margin:0 auto;
     box-sizing: border-box;
-    flex:1;
-
 }
 
 header {
@@ -30,8 +22,8 @@ nav {
     align-content:space-around;
     font-family: 'Cinzel';
     font-weight: lighter;
+    display:flex;
     line-height: 100%;
-    display: flex;
     justify-content: space-around;
     padding: 2px 2px 2px 2px;
     width:100%
@@ -44,7 +36,7 @@ nav > a {
 }
 
 nav > a:hover {
-    color: goldenrod;
+    color: goldenrod !important;
 }
 
 .searchIcon {
@@ -97,7 +89,6 @@ h1 > a {
     font-size:22px;
     color: #666666;
     align-content:space-around;
-    align-items: flex-end;
     font-family: 'Cinzel';
     font-weight: lighter;
     line-height: 200%; 
@@ -105,7 +96,7 @@ h1 > a {
 }
 
 h1 > a:hover {
-    color: goldenrod;
+    color: goldenrod !important;
 }
 
 h2 {
@@ -159,7 +150,6 @@ a {
 
     font-size:10px;
     color: #666666;
-    align-items: flex-end;
     font-family: 'Italiana', sans-serif;
     font-weight: 400;
     line-height: 150%;
@@ -205,7 +195,6 @@ a:hover {
 .images .image-box h4 {
     text-align: left;
     width:max-content;
-    display: inline-flex;
     font-size:8px;
     color: #666666;
     font-family: 'Cinzel';
@@ -267,6 +256,18 @@ footer {
 
 @media (max-width:728px) {
 
+.search-input {
+    width:70px;
+    padding:0;
+    margin: 0;
+}
+
+nav > a {
+padding:0;
+justify-content: left;
+}
+
+
     a:hover {
         color: goldenrod !important;
     }
@@ -274,11 +275,8 @@ footer {
 body {
     width: 100%;
     min-height: 100vh;   
-    margin:0px 20px 0px 20px;
-    flex-direction: column;
-    grid-template-columns: 1fr;
-    align-items: end;
     height:100vh;
+    margin: 0 auto;
 
 }
 
